# bitcoin

./: .cirrus.yml  .gitignore  .typos.toml  CMakeCIPresets.json  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPACK.md  CTestScript.cmake.example  Makefile.am  README.md  build-freebsd.sh  config  configure.ac  flake.nix  guix.cmake  hyperfine-config.json  justfile  pyproject.toml  replay.py  requirements-dev.txt  requirements-lint.txt  requirements.txt  ruff.toml  run-valgrind-tests.sh  shell.nix  threads.brk  ty.toml  wrap-valgrind-local.sh  zig-build
.github/: VOUCHED.td  ci-test-each-commit.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/macos/: flake.nix
.github/workflows/: bench.yml  benchmark.yml  ci.yml  nightly.yml  publish-results.yml  re-run.yml  rebase.yml  vouch-check-issue.yml  vouch-check-pr.yml  vouch-manage-by-discussion.yml  vouch-manage-by-issue.yml
bench-ci/: parse_and_plot.py  run-assumeutxo-bench.sh  run-assumeutxo-signet-bench.sh
build_msvc/: bitcoin.sln  bitcoin_config.h.in  msvc-autogen.py
ci/: design.md  docker-bake.hcl  flake.nix  justfile  lint.Dockerfile  lint.py  lint_imagefile  lint_run_all.sh  requirements.txt  test_imagefile
ci/lint/: 01_install.sh  04_install.sh  05_install_shellcheck.sh  06_script.sh  container-entrypoint.sh  requirements.txt
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_centos.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_host.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_alpine_musl.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_iwyu.sh  00_setup_env_native_msan.sh  00_setup_env_native_multiprocess.sh  00_setup_env_native_nowallet.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_qt5.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  00_setup_env_win64_msvcrt.sh  01_base_install.sh  02_run_container.sh  03_test_script.sh  Dockerfile.asan  Dockerfile.base  docker-bake.hcl  justfile
cmake/: CPackConfig.cmake  crc32c.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  test_assets.cmake
cmake/module/: AddBoostIfNeeded.cmake  FindLibevent.cmake  FindQRencode.cmake  FindUSDT.cmake  FindZeroMQ.cmake  InstallBinaryComponent.cmake  Maintenance.cmake
cmake/patches/: leveldb-ub-fix.patch
cmake/script/: GenerateBuildInfo.cmake
contrib/: README.md  filter-lcov.py  install_db4.sh  valgrind.supp
contrib/asmap/: asmap-tool.py  asmap.py
contrib/debian/: copyright
contrib/devtools/: check-deps.sh  check-openrpc.py  circular-dependencies.py  clang-format-diff.py  codesign-macos.sh  copyright_header.py  gen-manpages.py  gen-openrpc.py  headerssync-params.py  openrpc.py  security-check.py  special-instruction-check.py  symbol-check.py  test-security-check.py  test-special-instruction-check.py  test-symbol-check.py  utils.py
contrib/guix/: README.md  guix-build  manifest.scm  security-check.py  symbol-check.py
contrib/init/: bitcoind.conf  bitcoind.openrc
contrib/linearize/: README.md  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  macdeployqtplus
contrib/message-capture/: message-capture-parser.py
contrib/qos/: README.md
contrib/seeds/: generate-seeds.py  makeseeds.py
contrib/signet/: getcoins.py
contrib/stagex/: Dockerfile  build.sh
contrib/testgen/: gen_key_io_test_vectors.py
contrib/tracing/: log_raw_p2p_msgs.py  log_utxocache_flush.py  mempool_monitor.py  p2p_monitor.py
contrib/utxo-tools/: utxo_to_sqlite.py
contrib/verify-binaries/: test.py  verify.py
contrib/verify-commits/: verify-commits.py
contrib/zmq/: zmq_sub.py
depends/: Makefile  README.md  config.site.in  default.nix  dependencies.nix  dependency_provider.cmake  funcs.mk  toolchain.cmake.in
depends/builders/: darwin.mk  default.mk
depends/hosts/: darwin.mk  default.mk
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_macos.txt  README_windows.txt  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  files.md  init.md  multiprocess.md  offline-signing-tutorial.md  openrpc.json  productivity.md  reduce-memory.md  release-note-cpack.md  release-notes-27101.md  release-notes-34538.md  release-notes-empty-template.md  release-notes-tbd.md  release-process.md  tor.md  tracing.md
doc/design/: libraries.md  multiprocess.md
doc/man/: Makefile.am
doc/release-notes/: 28507.md  28824.md
share/: setup.nsi.in
share/qt/: extract_strings_qt.py
share/rpcauth/: rpcauth.py
src/: CMakeLists.txt  Makefile.am  Makefile.test.include  addrdb.cpp  addrdb.h  banman.cpp  banman.h  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-trace.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind.cpp  clientversion.cpp  coins.cpp  coins.h  core_io.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  external_signer.cpp  httprpc.cpp  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  logging.cpp  logging.h  net.cpp  net.h  net_permissions.cpp  net_permissions.h  net_processing.cpp  net_processing.h  net_types.cpp  net_types.h  (+25 more)
src/bench/: CMakeLists.txt  cache_fanout.cpp  ccoins_caching.cpp  connectblock.cpp  duplicate_inputs.cpp  wallet_create.cpp  wallet_ismine.cpp  wallet_loading.cpp
src/common/: args.cpp  args.h  init.cpp  init.h  netif.cpp  system.cpp
src/consensus/: consensus.h  tx_check.cpp  validation.h
src/crc32c/: README.md
src/crypto/: macros.h  sha256_avx2.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp
src/electrum/: mempoolindex.cpp  mempoolindex.h  methods.cpp  methods.h  server.cpp  server.h
src/index/: base.cpp  base.h  blockfilterindex.h  (+7 more)
test/: CMakeLists.txt  README.md  functional_tests.cmake  get_previous_releases.py
(+630 files in other folders)
