[project]
name = "bitcoin-core-deps"
version = "0.1.0"
dependencies = [
  "codespell==2.2.6",
  "lief==0.13.2",
  "mypy==1.4.1",
  "pyzmq==25.1.0",
  # Removing in favour of packaged nixpkgs bin which is not dynamically linked
  # "ruff==0.5.5",
  "vulture==2.6",
  "pyperf==2.8.0",
  "matplotlib==3.8.0",
  "numpy==1.26.0"
]
